[gd_scene load_steps=6 format=3 uid="uid://c6sf672nmok3s"]

[ext_resource type="Script" uid="uid://xhm35hpui8l5" path="res://script/chess_information.gd" id="1_f1mac"]
[ext_resource type="FontFile" uid="uid://d3b2vvdpmh8cc" path="res://asset/font/Everyday_Tiny_Original.ttf" id="1_wkp60"]
[ext_resource type="PackedScene" uid="uid://mjt8gly10q2q" path="res://scene/effect_icon.tscn" id="3_f1mac"]
[ext_resource type="Texture2D" uid="uid://b6x8lpjjcmev5" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240713dragonEmptyFrame.png" id="4_brif2"]
[ext_resource type="SpriteFrames" uid="uid://pcg2bjrj68rm" path="res://asset/animation/elf/elfQueen.tres" id="4_v35lb"]

[node name="chess_information" type="VBoxContainer"]
z_index = 20
custom_minimum_size = Vector2(100, 0)
offset_right = 100.0
offset_bottom = 124.0
script = ExtResource("1_f1mac")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 20
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="chess_name" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Hero Name: "
autowrap_mode = 3

[node name="chess_faction" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Hero Faction: "
autowrap_mode = 3

[node name="max_hp" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Max HP:"
autowrap_mode = 3

[node name="armor" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Armor:"
autowrap_mode = 3

[node name="speed" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Speed: "
autowrap_mode = 3

[node name="damage" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Damage: "
autowrap_mode = 3

[node name="attack_range" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Attack Range: "
autowrap_mode = 3

[node name="attack_speed" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Attack Speed:"
autowrap_mode = 3

[node name="spell" type="Label" parent="VBoxContainer"]
z_index = 25
custom_minimum_size = Vector2(100, 8)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_wkp60")
theme_override_font_sizes/font_size = 4
text = "Spell: "
autowrap_mode = 3

[node name="icon_container" type="HBoxContainer" parent="."]
z_index = 20
custom_minimum_size = Vector2(100, 16)
layout_mode = 2
size_flags_vertical = 10

[node name="effect_icon" parent="icon_container" instance=ExtResource("3_f1mac")]
layout_mode = 2

[node name="effect_icon2" parent="icon_container" instance=ExtResource("3_f1mac")]
layout_mode = 2

[node name="effect_icon3" parent="icon_container" instance=ExtResource("3_f1mac")]
layout_mode = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Node2D"]
z_index = 25
offset_left = 72.0
offset_top = 29.0
offset_right = 112.0
offset_bottom = 69.0
texture = ExtResource("4_brif2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Node2D"]
z_index = 4096
position = Vector2(91, 34)
scale = Vector2(2, 2)
sprite_frames = ExtResource("4_v35lb")
animation = &"die"

[connection signal="animation_finished" from="Node2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
